installed capacitor storage and setup  auth guard

--- a/src/app/auth-screens/intro/intro.page.html
+++ b/src/app/auth-screens/intro/intro.page.html
@@ -2,12 +2,29 @@
   <ion-slides #slides pager="true" [options]="slideOpts">
     <ion-slide
       [style.background-image]="'url(assets/imgs/screen1.png)'"
-    ></ion-slide>
+      class="topRight"
+    >
+      <ion-button fill="clear" color="light" (click)="goToLogin()"
+        >SKIP</ion-button
+      >
+    </ion-slide>
     <ion-slide
       [style.background-image]="'url(assets/imgs/screen2.png)'"
-    ></ion-slide>
-    <ion-slide
-      [style.background-image]="'url(assets/imgs/screen3.png)'"
-    ></ion-slide>
+      class="topRight"
+    >
+      <ion-button fill="clear" color="light" (click)="goToLogin()"
+        >SKIP</ion-button
+      >
+    </ion-slide>
+    <ion-slide [style.background-image]="'url(assets/imgs/screen3.png)'">
+      <ion-button
+        (click)="goToLogin()"
+        shape="round"
+        fill="outline"
+        color="primary"
+        class="transformButton"
+        ><ion-text color="light">Let's Start</ion-text>
+      </ion-button>
+    </ion-slide>
   </ion-slides>
 </ion-content>
