--- a/src/app/auth-screens/intro/intro.page.scss
+++ b/src/app/auth-screens/intro/intro.page.scss
@@ -7,4 +7,13 @@ ion-slides {
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  .topRight {
+    align-items: initial;
+    justify-content: flex-end;
+  }
+
+  .transformButton {
+    transform: translateY(30vh);
+  }
 }
