styled auth screen

--- a/src/app/auth-screens/auth-screens/auth-screens.page.html
+++ b/src/app/auth-screens/auth-screens/auth-screens.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>auth-screens</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="background">
+  <div class="ion-text-center">
+    <img src="../../../assets/imgs/logo.png" alt="" />
+  </div>
 
-<ion-content>
+  <ion-list class="ion-margin">
+    <div class="ion-margin">
+      <ion-segment mode="ios" value="1">
+        <ion-segment-button value="1">
+          <ion-label>Login</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="2">
+          <ion-label>Login</ion-label>
+        </ion-segment-button>
+      </ion-segment>
+    </div>
 
+    <form [formGroup]="form"></form>
+  </ion-list>
 </ion-content>
